fix scrollbar jump to bottom on post loaded from posts page

--- a/UI/src/app/app.component.scss
+++ b/UI/src/app/app.component.scss
@@ -1,11 +1,11 @@
 .mat-sidenav-container {
-  height: 100%;
   background: #17191C;
 }
 
 .mat-sidenav {
   width: 200px;
 }
+
 
 
 
